[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi>=0.121.0",
    "pydantic[email]>=2.12.3",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.15.5",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]
